--- a/Sokoban-app/Sokoban-app.vcxproj
+++ b/Sokoban-app/Sokoban-app.vcxproj
@@ -137,37 +137,42 @@
     <ClCompile Include="BackGroundComponent.cpp" />
     <ClCompile Include="Baggage.cpp" />
     <ClCompile Include="BaggageComponent.cpp" />
+    <ClCompile Include="Button.cpp" />
+    <ClCompile Include="Font.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameBoard.cpp" />
     <ClCompile Include="GameBoardComponent.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MCTS.cpp" />
-    <ClCompile Include="Menu.cpp" />
-    <ClCompile Include="MenuComponent.cpp" />
     <ClCompile Include="MySolution.cpp" />
+    <ClCompile Include="PauseMenu.cpp" />
     <ClCompile Include="PGSL.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerComponent.cpp" />
     <ClCompile Include="PuzzleGenerator.cpp" />
     <ClCompile Include="State.cpp" />
+    <ClCompile Include="HUD.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BackGround.h" />
     <ClInclude Include="BackGroundComponent.h" />
     <ClInclude Include="Baggage.h" />
     <ClInclude Include="BaggageComponent.h" />
+    <ClInclude Include="Button.h" />
+    <ClInclude Include="Font.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameBoard.h" />
     <ClInclude Include="GameBoardComponent.h" />
+    <ClInclude Include="IUIScreen.h" />
     <ClInclude Include="MCTS.h" />
-    <ClInclude Include="Menu.h" />
-    <ClInclude Include="MenuComponent.h" />
     <ClInclude Include="MySolution.h" />
+    <ClInclude Include="PauseMenu.h" />
     <ClInclude Include="PGSL.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerComponent.h" />
     <ClInclude Include="PuzzleGenerator.h" />
     <ClInclude Include="State.h" />
+    <ClInclude Include="HUD.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
