一部を除くGUI周りの機能を整備、マウスカーソルの判定や、ウィジェットの描画周りに不具合がある。

--- a/.claudiaideconfig
+++ b/.claudiaideconfig
@@ -1,6 +1,6 @@
 ﻿{
-  "BackgroundImageAbsolutePath": "C:\\Users\\Moriy\\Pictures\\564309-Helltaker-demon-girl-demon-girls-simple-background.jpg",
-  "BackgroundImagesDirectoryAbsolutePath": "c:\\users\\moriy\\appdata\\local\\microsoft\\visualstudio\\17.0_bdf9f642\\extensions\\mjtxcquv.en0\\Images",
+  "BackgroundImageAbsolutePath": "C:\\Users\\Moriy\\Pictures\\1082845.png",
+  "BackgroundImagesDirectoryAbsolutePath": "c:\\users\\moriy\\appdata\\local\\microsoft\\visualstudio\\17.0_d0d4b0b8\\extensions\\bqxe4gal.gak\\Images",
   "BlurMethod": 0,
   "BlurRadius": 0,
   "EditorBackgroundColor": "",
@@ -10,13 +10,14 @@
   "ImageBackgroundType": 0,
   "ImageFadeAnimationInterval": "PT5S",
   "ImageStretch": 0,
+  "IncludeSubdirectories": false,
   "IsLimitToMainlyEditorWindow": false,
   "IsTransparentToContentMargin": false,
   "IsTransparentToStickyScroll": false,
   "LoopSlideshow": true,
   "MaxHeight": 0,
   "MaxWidth": 0,
-  "Opacity": 0.1,
+  "Opacity": 0.35,
   "PositionHorizon": 1,
   "PositionVertical": 1,
   "ShuffleSlideshow": false,
